@@ -1,3 +1,6 @@
+2010-01-07 gabriel
+* Add dialog to display the list of gadget
+
 2010-01-05 gabriel
 * Add Domains and clean up the code that generates domains
 
